border should be visible

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -149,7 +149,7 @@ $scroll-button-width: $grid-gutter-x;
 
 .navigation__link {
   display: block;
-  padding: 1rem 0;
+  padding: 1rem 0 0.8125rem;
   border-bottom: 3px solid transparent;
 
   transition: .2s ease border-color;
