--- a/components/article/article.module.scss
+++ b/components/article/article.module.scss
@@ -48,13 +48,27 @@
   letter-spacing: 0.02em;
 }
 
-.article__image {
+.article__image-wrapper {
+  position: relative;
+  height: 0;
+  padding-bottom: percentage(297 / 527);
   margin-bottom: 1.25rem;
+
+  .article--sub & {
+    padding-bottom: percentage(800 / 1200);
+  }
 
   .article--column & {
     grid-area: image;
     margin-bottom: 0;
   }
+}
+
+.article__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .article__title {
