--- a/components/category/category.module.scss
+++ b/components/category/category.module.scss
@@ -6,6 +6,7 @@
   grid-column-end: span 12;
 
   border-top: 1px solid $tundora;
+  margin-top: 3rem;
   margin-bottom: 2rem;
   padding-top: 0.625rem;
 }
@@ -18,7 +19,7 @@
     position: absolute;
     left: 0;
     right: -.25rem;
-    top: -0.625rem;
+    top: -0.5rem;
     height: .25rem;
     background-color: $sunglow;
   }
