--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -158,3 +158,7 @@ $scroll-button-width: $grid-gutter-x;
     border-bottom-color: $sunglow;
   }
 }
+
+.navigation__link--active {
+  border-bottom-color: $sunglow;
+}
