--- a/components/article/article.module.scss
+++ b/components/article/article.module.scss
@@ -35,7 +35,7 @@
 
 .article__label {
   @include font-styles("small");
-  background: $gamboge;
+  background: darken($gamboge, 7%);
   color: $white;
 
   position: absolute;
