--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -12,17 +12,17 @@ $font-sizes-small: (
   "h4": 1.563rem,
   "h5": 1.25rem,
   "body": 1rem,
-  "small": 0.8rem
+  "small": 0.85rem,
 );
 
 $font-sizes: (
   "h1": 3.052rem,
   "h2": 2.441rem,
-  "h3": 1.953rem,
+  "h3": 2.1rem,
   "h4": 1.563rem,
-  "h5": 1.25rem,
-  "body": 1rem,
-  "small": 0.8rem
+  "h5": 1.375rem,
+  "body": 1.125rem,
+  "small": 0.85rem
 );
 
 $line-heights-small: (
@@ -31,7 +31,7 @@ $line-heights-small: (
   "h3": 1.16,
   "h4": 1.16,
   "h5": 1.16,
-  "body": 1.5,
+  "body": 1.45,
   "small": 1.5
 );
 
@@ -41,7 +41,7 @@ $line-heights: (
   "h3": 1.16,
   "h4": 1.16,
   "h5": 1.16,
-  "body": 1.5,
+  "body": 1.45,
   "small": 1.5
 );
 
