--- a/components/weather/weather.module.scss
+++ b/components/weather/weather.module.scss
@@ -3,4 +3,97 @@
 
 .weather {
   grid-column-end: span 6;
+
+  display: flex;
+  margin-bottom: 2rem;
+
+  background: $cobalt;
+  color: $white;
+}
+
+.weather__today {
+  box-sizing: border-box;
+  flex: 0 0 50%;
+  background: $cobalt;
+  color: $white;
+  padding: $grid-gutter-x / 2;
+}
+
+.weather__forecast {
+  box-sizing: border-box;
+  flex: 0 0 50%;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: $grid-gutter-x / 2;
+}
+
+.weather__title {
+  @include font-styles("body");
+  font: inherit;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.07em;
+
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.weather__icon {
+  display: block;
+  width: 1.5rem;
+  fill: currentColor;
+
+  .forecast & {
+    margin-right: .75rem;
+  }
+}
+
+.weather__icon--main {
+  width: 2.5rem;
+  margin: 0 auto;
+}
+
+.weather__temparatur {
+  @include font-styles("body");
+  text-align: center;
+}
+
+.weather__condition {
+  @include font-styles("small");
+  text-align: center;
+}
+
+.forecast {
+  @include font-styles("small");
+  display: block;
+  list-style: none;
+}
+
+.forecast__item {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid $mercury;
+  padding: .5em;
+
+  &:first-child {
+    border-top: 1px solid $mercury;
+  }
+}
+
+.forecast__week-day {
+  flex-basis: 2rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  margin-right: .5rem;
+}
+
+.forecast__temparatur {
+  flex-basis: 2rem;
+}
+
+.forecast__label {
+  
 }
