--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,7 +6,8 @@ $breakpoints: (
 
 $max-width: 1024 / 16 * 1rem;
 
-$grid-gutter-x: 30 / 16 * 1rem;
+$grid-gutter: 20 / 16 * 1rem;
+$grid-gutter-medium: 30 / 16 * 1rem;
 
 
 /* Colors */
