--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -33,7 +33,7 @@ $scroll-button-width-medium: $grid-gutter-medium;
 .navigation {
   flex: 0 0 100%;
 
-  height: 3.5rem;
+  height: 3.3rem;
   overflow: hidden;
 
   border-bottom: 1px solid $mercury;
@@ -81,6 +81,10 @@ $scroll-button-width-medium: $grid-gutter-medium;
     @include breakpoint(medium) {
       right: $scroll-button-width-medium;
     }
+  }
+
+  @include breakpoint(medium) {
+    height: 3.5rem;
   }
 }
 
@@ -163,19 +167,23 @@ $scroll-button-width-medium: $grid-gutter-medium;
 }
 
 .navigation__item {
-  @include font-styles("h3");
+  @include font-styles("body");
   letter-spacing: 0.025em;
   white-space: nowrap;
-  margin-right: 3rem;
+  margin-right: $grid-gutter * 1.5;
 
   &::last-child {
     margin-right: 0;
+  }
+
+  @include breakpoint(medium) {
+    margin-right: $grid-gutter-medium * 1.5;
   }
 }
 
 .navigation__link {
   display: block;
-  padding: 1rem 0 0.7rem;
+  padding: 0.85rem 0 0.8rem;
   border-bottom: 3px solid transparent;
 
   transition: .2s ease border-color;
@@ -183,6 +191,11 @@ $scroll-button-width-medium: $grid-gutter-medium;
   &:hover {
     border-bottom-color: $sunglow;
   }
+
+  @include breakpoint(medium) {
+    padding: 1rem 0 0.675rem;
+  }
+
 }
 
 .navigation__link--active {
