add and apply clamping on small screens to prevent article from being to wide. some other responsive stuff

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -5,3 +5,17 @@
     @content;
   }
 }
+
+@mixin small-clamp() {
+  width: 100%;
+  max-width: $small-clamp;
+  margin-left: auto;
+  margin-right: auto;
+
+  @include breakpoint(medium) {
+    width: auto;
+    max-width: none;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
