--- a/components/article/article.module.scss
+++ b/components/article/article.module.scss
@@ -2,6 +2,7 @@
 @import "../../styles/variables";
 
 .article {
+  @include small-clamp();
   position: relative;
   padding-bottom: 0.875rem;
   border-bottom: 1px solid $mercury;
@@ -11,6 +12,10 @@
 
   display: flex;
   flex-direction: column;
+
+  @include breakpoint(medium) {
+    grid-column-end: span 6;
+  }
 
   @include breakpoint(large) {
     grid-column-end: span 4;
