--- a/components/weather/weather.module.scss
+++ b/components/weather/weather.module.scss
@@ -4,17 +4,23 @@
 .weather {
   grid-column-end: span 12;
 
-  display: flex;
   margin-bottom: 2rem;
+  margin-left: -$grid-gutter;
+  margin-right: -$grid-gutter;
+  padding: 0 $grid-gutter;
 
   background: $cobalt;
   color: $white;
 
+  display: grid;
+  grid-template-columns: minmax(0, $small-clamp);
+  justify-content: center;
+
   @include breakpoint(medium) {
     grid-column-end: span 6;
-
-    flex-direction: column;
-    // justify-content: center;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0 $grid-gutter-medium;
   }
 
   @include breakpoint(large) {
@@ -29,11 +35,17 @@
   flex: 0 0 50%;
   background: $cobalt;
   color: $white;
-  padding: 2rem $grid-gutter / 2 $grid-gutter / 2;
+
+  padding: $grid-gutter 0;
+
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-auto-rows: min-content;
+  grid-template-areas: "title title" "temparatur icon" "condition icon";
 
   @include breakpoint(medium) {
     flex: 0 0 auto;
-    padding: 2rem $grid-gutter-medium / 2 $grid-gutter-medium / 2;
+    padding: $grid-gutter-medium 0;
   }
 
   @include breakpoint(large) {
@@ -44,15 +56,15 @@
 .weather__forecast {
   box-sizing: border-box;
   flex: 0 0 50%;
+  padding: $grid-gutter 0;
   
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: $grid-gutter / 2;
 
   @include breakpoint(medium) {
     flex: 0 0 auto;
-    padding: $grid-gutter-medium / 2;
+    padding: $grid-gutter-medium 0;
   }
 
   @include breakpoint(large) {
@@ -67,8 +79,9 @@
   text-transform: uppercase;
   letter-spacing: 0.07em;
 
-  text-align: center;
   margin-bottom: 1rem;
+
+  grid-area: title;
 }
 
 .weather__icon {
@@ -82,18 +95,26 @@
 }
 
 .weather__icon--main {
-  width: 2.5rem;
+  grid-area: icon;
+  align-self: center;
+  justify-self: center;
+
+  width: 3.5rem;
   margin: 0 auto;
 }
 
 .weather__temparatur {
-  @include font-styles("body");
-  text-align: center;
+  @include font-styles("h2");
+  font-family: $font-family-heading;
+
+  grid-area: temparatur;
 }
 
 .weather__condition {
-  @include font-styles("small");
-  text-align: center;
+  @include font-styles("h2");
+  font-family: $font-family-heading;
+
+  grid-area: condition;
 }
 
 .forecast {
