--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,10 +1,11 @@
 $breakpoints: (
   small: 0rem,
-  medium: (640 / 16) * 1rem,
+  medium: (768 / 16) * 1rem,
   large: (1024 / 16) * 1rem,
 );
 
 $max-width: 1024 / 16 * 1rem;
+$small-clamp: 32rem;
 
 $grid-gutter: 20 / 16 * 1rem;
 $grid-gutter-medium: 30 / 16 * 1rem;
